[gd_scene load_steps=3 format=2]

[ext_resource path="res://Reused/ReusableSystems/DOptionSelect/DOptionSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/LobbyMenu/LobbyMenu.gd" type="Script" id=2]

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="_Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 58.0
rect_min_size = Vector2( 400, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeSelect" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 302.0
margin_right = 400.0
margin_bottom = 352.0
options = [ "Lobby", "Campaign" ]

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 400.0
margin_bottom = 385.0
size_flags_horizontal = 3
text = "Load"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 389.0
margin_right = 400.0
margin_bottom = 418.0
size_flags_horizontal = 3
text = "Exit"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="option_select" from="VBoxContainer/GameModeSelect" to="." method="create_and_set_game_mode"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
